--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyfts = "*"
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+pyFTS = "*"
 
 [dev-packages]
 
