--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 pyFTS = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [dev-packages]
 
